Updated build, added UI

--- a/game/index.html
+++ b/game/index.html
@@ -7,10 +7,15 @@
     <script type="text/javascript" src="src/G.js"></script>
     <script type="text/javascript" src="src/BootState.js"></script>
     <script type="text/javascript" src="src/WebcamPlugin.js"></script>
-    <script type="text/javascript" src="src/Shaders.js"></script>
     <script type="text/javascript" src="src/WebcamState.js"></script>
 </head>
 <body>
     <div id="cam"></div>
+    <div id="output" style="display: none">
+        <img id="shot-full" title="full">
+        <img id="shot-120" title="120px">
+        <img id="shot-72" title="72px">
+        <img id="shot-48" title="48px">
+    </div>
 </body>
 </html>
