--- a/game/index.html
+++ b/game/index.html
@@ -27,7 +27,7 @@
             with <a href="http://phaser.io" target="_new">Phaser</a>.
         </p>
         <p>
-            <a href="http://github.com" target="_new">Source @ GitHub</a>
+            <a href="https://github.com/jotson/phaser-webcam" target="_new">Source @ GitHub</a>
         </p>
         <p>
             Copyright © 2015 <a href="http://flagrantdisregard.com" target="_new">John Watson</a>
