--- a/index.html
+++ b/index.html
@@ -40,5 +40,16 @@
         <a href="#" target="_new"><img id="shot-72" title="72px"></a>
         <a href="#" target="_new"><img id="shot-48" title="48px"></a>
     </div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53154-25', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
